--- a/moodbot/data/nlu.yml
+++ b/moodbot/data/nlu.yml
@@ -16,6 +16,12 @@ nlu:
     - goodmorning
     - goodevening
     - good afternoon
+    - Hallo
+    - Tach
+    - nice to see you
+    - howdy
+    - yo
+    
 
 - intent: goodbye
   examples: |
@@ -38,6 +44,18 @@ nlu:
     - of course
     - that sounds good
     - correct
+    - yes, I do
+    - oh yes
+    - I agree
+    - i do
+    - i would say yes
+    - yes, I rather do
+    - quite, yes
+    - Thanks
+    - that's ok
+    - si
+    - understood
+    - clear
 
 - intent: deny
   examples: |
@@ -48,6 +66,15 @@ nlu:
     - don't like that
     - no way
     - not really
+    - not so much
+    - not very
+    - rather not
+    - not quite
+    - never
+    - never ever
+    - I doubt
+    - I don't really know
+    - don't know
 
 - intent: mood_great
   examples: |
@@ -65,6 +92,7 @@ nlu:
     - so so perfect
     - so good
     - so perfect
+    - i am happy
 
 - intent: mood_unhappy
   examples: |
@@ -82,6 +110,13 @@ nlu:
     - extremly sad
     - so saad
     - so sad
+    - not so good
+    - not that good
+    - not too good
+    - it could be better
+    - a bit depressed
+    - i am tired
+    - i feel exhausted
 
 - intent: bot_challenge
   examples: |
@@ -89,3 +124,22 @@ nlu:
     - are you a human?
     - am I talking to a bot?
     - am I talking to a human?
+    - do you understand me at all?
+- intent: tell_name
+  examples:
+    - I am [Marco](name)
+    - I am [Marco](name)
+    - Call me [Patrick](name)
+    - It's [Aline](name)
+    - I'm [Irene](name)
+    - My name is [Marco](name)
+    - People call me [Marco](name)
+    - I am called [Donald](name)
+    - [Jennifer](name)
+    - They call me [Eugene](name)
+    - Call me [Max](name)
+    - My friends call me [Winni](name)
+    - [Hanna](name)
+    - [Sarah](name)
+    - [Tim](name)
+    - [John](name)
